# sml-catalogue

./: .bandit  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CMS.md  CODEOWNERS  CONTENTFUL_CHANGELOG.md  Contentful_Audit.sh  Contentful_audit.py  LICENSE  Makefile  Pipfile  README.md  axeResults.json  bk  catalog-info.yaml  contentful_migrate.sh  contentful_rollback.sh  deletion_changeset.py  file.py  freeze-n-load.sh  freeze.py  get_design_system.sh  github-actions-demo.yml  install-dependencies.sh  migrate.sh  pelicanconf.py  pyproject.toml  readme.md  run_py_tools.sh  terraform.sh  test.py  test_report_generation.sh  wget-log
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci_checks.yml  contenful-push.yml  contentful-update.yml  deploy.yml  deploy_dev_main.yml  deploy_main.yml  deploy_prod_preprod.yml  deploy_workspace.yml  github-actions-demo.yml  linting.yml  pr-closed.yml  pre-release.yml  reusable.yml  static-tests.yml
.well-known/: security.txt
Temp/: about.feature  generic.py  header.feature  ht_ratio_estimation.feature  ratio-of-means.py  selective-editing.py  winsorisation.py
ci/: dev-pipeline.yml  live-pipeline.yml  pipeline.yml  rollback-environment.yml
ci/tasks/: apply_terraform.sh  apply_terraform.yml  build_files.sh  build_files.yml  deploy.sh  deploy.yml  destroy_terraform.yml  get_branch_name.yml  init_metadata.yml  list-repo.sh  list-repo.yml  run_bdd_tests.sh  run_bdd_tests.yml
config/: README.md  feature.json
content/about/: about-this-library.md  notesOnTesting.md
content/accessibility/: accessibility-statement.md
content/api_reference/: api_reference.json
content/glossary/: accredited-researcher.json  accredited-researcher.jsonnet  an-example.jsonnet  another-example.jsonnet  baw.jsonnet  community-methods.json  community-methods.jsonnet  example.jsonnet  expert-group.json  expert-group.jsonnet  exploration.json  exploration.jsonnet  git.json  git.jsonnet  github.json  github.jsonnet  idp.json  idp.jsonnet  ids.json  ids.jsonnet  internal-methods.jsonnet  markdown.json  markdown.jsonnet  metadata.json  metadata.jsonnet  official-outputs.json  official-outputs.jsonnet  package.json  package.jsonnet  private-methods.jsonnet  public-methods.jsonnet  release-notes.json  release-notes.jsonnet  release.json  release.jsonnet  repository.json  repository.jsonnet  semantic-versioning.json  semantic-versioning.jsonnet  sensitive.json  (+12 more)
content/help_centre/: access-specification-code.md  coding-standards.md  github.md  guidances.jsonnet  help_centre.json  help_centre.libsonnet  methods-request.md  report-bug.md  run-a-method.md  selective-edit-example.md  submit-methods.md  support.md  troubleshooting.md  version-methods.md  view-methods.md  view_methods.jsonnet
content/methods/: date-adjustment.jsonnet  example-method.jsonnet  ht-ratio-estimation.jsonnet  keyboard-review.md  ratio-of-means.jsonnet  (+3 more)
contentful-data/: README.md  migration-log.txt
contentful-export/: dev-export.json
deployment_role_bootstrap/: README.md  bootstrap_role.sh  role.tf
features/: Pipfile  about.feature  accessibility.feature  beta-banner.feature  cookies.feature  date_adjustment.feature  footer.feature  glossary.feature  header.feature  help_center.feature  home.feature  ht_ratio_estimation.feature  method_summary.feature  methods.feature  ratio_of_means.feature  search.feature  selective_editing.feature  thousand_pound_correction.feature  winsorisation.feature
lambda_functions/: README.md  healthcheck.py
performance_tests/: README.md
scripts/: Contentful_Audit.sh  contentful_Audit.sh  contentful_migrate.sh  contentful_rollback.sh  update_changelog.sh
site/: sitemap.xml
sml_builder/: CMS.MD  __init__.py  api_reference.py  cms.py  env_config.py  glossary.py  headlessCMS.py  help_centre.py  method.py  page.py  search_tool.py  utils.py
terraform/: alerter.lambda.tf  alerter.tf  alerter_lambda.tf  backend.tf  cloudfront.tf  cloudwatch.tf  core.tf  events.tf  healthcheck.tf  healthcheck_lambda.tf  healthcheck_route53.tf  output.tf  route53.tf  s3.tf  sns.tf  variables copy.tf  variables.tf
terraform/healthcheck/lambda_functions/alerter/: alerter.py  pyproject.toml
(+383 files in other folders)
