[tool.poetry]
name = "sml-catalogue"
version = "1.5.0-rc.11"
description = "This repo contains the build environment and code to generate and upload the Statistical Methods Library (SML) Portal Web Application."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
frozen-flask = "^1.0"
jsonnet = "^0.20.0"
markdown = "^3.6"
flask-markdown = "^0.3"
contentful = "^2.2.0"
python-markdown-mathjax = "1.0.4"
python-markdown-math="^0.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
behave = "^1.2.6"
selenium = "^4.20.0"
flake8 = "^7.0.0"
pylint = "3.1.0"
bandit = "^1.7.8"
pandas = "^2.2.1"
isort = "^5.12.0"
axe-selenium-python = "^2.1.6"
python-semantic-release = "<8.0.0"
werkzeug = "2.3.8"

[tool.bandit]
exclude_dirs = ["features", "./venv/", "/tempenv/"]

[tool.isort]
profile="black"
known_third_party=["boto3","moto","pandas","numpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
build_command = "python freeze.py && mkdir dist/ && zip -r dist/build.zip build/"
prerelease_tag = "rc"