[tool.poetry]
name = "alerter"
version = "1.1.0"
description = "Contains the packages needed for the alerter function"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
frozen-flask = "^0.18"
jsonnet = "^0.20.0"
markdown = "^3.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
build_command = "python freeze.py && mkdir dist/ && zip -r dist/build.zip build/"
prerelease_tag = "rc"